Small report change

--- a/Report/Compression Report.tex
+++ b/Report/Compression Report.tex
@@ -23,7 +23,7 @@
 \center
 
 \includegraphics[scale=0.1]{logo.png}\\[1cm]
-\text{\Large Master MsCV 1/MAIA}\\[0.5cm]
+\text{\Large Master MsCV 1/MAIA Image Processing Project}\\[0.5cm]
 
 { \Large \bfseries Basic Compression Methods}\\[0.4cm]
 \HRule \\[1.5cm]
@@ -38,7 +38,7 @@ Doiriel \textsc{Vanegas}
 ~
 \begin{minipage}{0.4\textwidth}
 \begin{flushright} \large
-\emph{Supervisors:} \\
+\emph{Supervisor:} \\
 Dr. Christophe \textsc{Stoltz}\\
 \end{flushright}
 \end{minipage}\\[2cm]
