adding huffman to report

--- a/Report/Compression Report.tex
+++ b/Report/Compression Report.tex
@@ -51,7 +51,7 @@ Dr. Christophe \textsc{Stoltz}\\
 \setcounter{page}{2}
 
 \section{Introduction}
-Data compression is key to modern communications: it is prevalent to every device we could think of \cite{Salomon2007}. To most people, it is vitally important to send and store as little information as possible to send it quicker and save space, without losing too much or any information. Data compression allow an input stream to be converted into an output stream with a smaller size. There are many specialized algorithms for certain applications. For example, arithmetic coding allows a sequence of data to be encoded in one code. The method begins with an interval, and shortens the interval based on the probability of each symbol in the sequence. High probability symbols shorten the interval less, and correspond to less bits in the output stream. Arithmetic coding has slight advantages to Huffman coding, as Huffman coding assigns integer codes to individual symbols. Huffman coding ????. Lastly, JPEG encoding is especially important for those who want to share and save images. It is a lossy coding technique, but the images do not appear to be compressed. The JPEG encoder is able to split the image into many uniformly sized blocks, transformed to the frequency domain, quantized, and encoded. In this report, we explore these three coding types, as algorithms in Matlab.
+Data compression is key to modern communications: it is prevalent to every device we could think of \cite{Salomon2007}. To most people, it is vitally important to send and store as little information as possible to send it quicker and save space, without losing too much or any information. Data compression allow an input stream to be converted into an output stream with a smaller size. There are many specialized algorithms for certain applications. For example, arithmetic coding allows a sequence of data to be encoded in one code. The method begins with an interval, and shortens the interval based on the probability of each symbol in the sequence. High probability symbols shorten the interval less, and correspond to less bits in the output stream. Arithmetic coding has slight advantages to Huffman coding, as Huffman coding assigns integer codes to individual symbols. Huffman coding serves as the basis for several popular programs run on various platforms. It is a lossless data compression method which takes a set of symbols and their probabilities and returns a binary code (set of codewords) with minimum expected codeword length. Lastly, JPEG encoding is especially important for those who want to share and save images. It is a lossy coding technique, but the images do not appear to be compressed. The JPEG encoder is able to split the image into many uniformly sized blocks, transformed to the frequency domain, quantized, and encoded. In this report, we explore these three coding types, as algorithms in Matlab.
 
 \section{Arithmetic Coding}
 \subsection{Arithmetic Encoding}
@@ -75,6 +75,13 @@ newdecimal = \frac{olddecimal - lowrange(X)}{range(X)}
 This new decimal is evaluated to determine which interval it belongs to, the corresponding symbol is assigned to the decoded sequence, and the calculations are performed again, until newdecimal equals one, indicating the entire stream has been decoded. For decimals on the border between two intervals, the lowrange is included in each interval.
 
 \section{Huffman Coding}
+The algorithm starts by building a list of all the alphabet symbols in descending order of their probabilities. It then constructs a tree, with a symbol at every leaf, from the bottom up. This is done in steps, where at each step the two symbols with smallest probabilities are selected, added to the top of the partial tree, deleted from the list, and replaced with an auxiliary symbol representing the two original symbols. When the list is reduced to just one auxiliary symbol (representing the entire alphabet), the tree is complete. The tree is then traversed to determine the codes of the symbols  \cite{Salomon2007}.
+
+For implementing Huffman Coding in Matlab, two functions were written: 
+\begin{itemize}
+\item \texttt{huffman\char`_encoding\char`.m} takes a probability vector and its corresponding list of symbols (alphabet), builds the Huffman tree and generates the Huffman codebook containing the binary codes for each symbol (codewords).
+\item \texttt{huffman\char`_image\char`.m}  takes a gray image and returns the codebook contaning codewords for each gray value present on the image. The function first calculates the probability vector for the image by computing its histogram and in a second step calls \texttt{huffman\char`_encoding\char`.m} to generate the final codebook. 
+\end{itemize}
 
 \section{Simplified JPEG Encoding}
 JPEG is the most common imaging format in the world. Matlab has many built-in functions in the image processing toolbox to convert images to JPEG, but in this section, we describe a method that takes the raw data and encodes the JPEG, using our own Huffman coding function.
